# temporal-horizon-interpret

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
configs/: dataset_config.yaml  experiment_config.yaml  model_config.yaml  probe_config.yaml
data/: README.md
docs/: api_reference.md  experiment_log.md  latents_integration.md  methodology.md  results.md  transformerlens_usage.md
examples/: complete_workflow.py
notebooks/: 01_dataset_exploration.ipynb  04_circuit_analysis.ipynb  06_latents_steering_comparison.ipynb
paper/: draft.md
scripts/: compare_probe_vs_steering.py  evaluate_model.py  extract_activations.py  generate_dataset.py  reproduce_results.sh  run_circuit_analysis.py  train_probes.py  validate_pipeline.py
src/: __init__.py
src/analysis/: __init__.py  cross_model.py  divergence_detector.py  statistics.py
src/circuits/: __init__.py  ablation.py  activation_patching.py  attribution.py  visualization.py
src/dataset/: __init__.py  generator.py  loader.py  templates.py  validator.py
src/models/: activation_extractor.py  config.py  model_loader.py
src/probing/: __init__.py  adversarial.py  evaluator.py  probe.py  trainer.py
src/utils/: latents_integration.py  logging_utils.py  metrics.py  visualization.py
tests/: __init__.py  test_circuits.py  test_dataset.py  test_models.py  test_probing.py
